Colab을 통해 생성됨

--- a/3장_집합_실습.ipynb
+++ b/3장_집합_실습.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBgGNPnU1cjZ40wIHqPIQB",
+      "authorship_tag": "ABX9TyNvXv3/hZpmIV0P/hVVtg2s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BJMn6mA90KCW",
-        "outputId": "2914ce1d-020c-4b00-d771-06595606b99d"
+        "outputId": "09bd0e41-d6d3-469c-c080-64ce3685318b"
       },
       "outputs": [
         {
@@ -63,47 +63,109 @@
     {
       "cell_type": "code",
       "source": [
-        "# 두 은행의 고객 집합 선언\n",
-        "bankA = set =([\"김철수\",\"이영희\",\"박민수\",\"최지우\"])\n",
-        "bankB= set= ([\"이영희\",\"최지우\",\"정우성\",\"한지민\"])\n",
+        "bankA_customers = set([\"김철수\",\"이영희\",\"박민수\",\"최지우\"])\n",
+        "bankB_customers = set([\"이영희\",\"최지우\",\"정우성\",\"한지민\"])\n",
         "\n",
-        "print(\"은행 A 고객 :\", bankA)\n",
-        "print(\"은행 B 고객 :\", bankB)\n",
+        "print(\"은행 A 고객:\", bankA_customers)\n",
+        "print(\"은행 B 고객:\", bankB_customers)\n",
         "\n",
-        "#두 은행의 합집합\n",
-        "common_customers = bankA  bankB\n",
-        "print(\"두 은행의 고객 합집합 :\", common_customers)"
+        "total_customers = bankA_customers | bankB_customers\n",
+        "print(\"합병 후 전체 고객:\", total_customers)\n",
+        "\n",
+        "common_customers = bankA_customers & bankB_customers\n",
+        "print(\"공통 고객:\", common_customers)\n",
+        "\n",
+        "only_A_customers = bankA_customers - bankB_customers\n",
+        "print(\"A 은행에만 있는 고객:\", only_A_customers)\n",
+        "\n",
+        "only_B_customers = bankB_customers - bankA_customers\n",
+        "print(\"B 은행에만 있는 고객:\", only_B_customers)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 239
+          "base_uri": "https://localhost:8080/"
         },
         "id": "OumkWJAk2M5F",
-        "outputId": "e9b7320a-7cd4-42b8-e8bc-541227f9a7d7"
+        "outputId": "591add7c-7fbe-4b66-c408-a55574b7c6cd"
       },
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "은행 A 고객 : ['김철수', '이영희', '박민수', '최지우']\n",
-            "은행 B 고객 : ['이영희', '최지우', '정우성', '한지민']\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "unsupported operand type(s) for &: 'list' and 'list'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1685178311.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m#두 은행의 합집합\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mcommon_customers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbankA\u001b[0m \u001b[0;34m&\u001b[0m \u001b[0mbankB\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"두 은행의 고객 합집합 :\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcommon_customers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for &: 'list' and 'list'"
+            "은행 A 고객: {'김철수', '최지우', '박민수', '이영희'}\n",
+            "은행 B 고객: {'최지우', '정우성', '한지민', '이영희'}\n",
+            "합병 후 전체 고객: {'박민수', '정우성', '한지민', '김철수', '이영희', '최지우'}\n",
+            "공통 고객: {'이영희', '최지우'}\n",
+            "A 은행에만 있는 고객: {'김철수', '박민수'}\n",
+            "B 은행에만 있는 고객: {'정우성', '한지민'}\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "faber_castell_colors = {\n",
+        "    \"White\" : (255, 255, 255),\n",
+        "    \"Black\" : (0, 0, 0),\n",
+        "    \"Brown\" : (150, 75, 0),\n",
+        "    \"Orange\" : (255 , 0, 0),\n",
+        "    \"Red\" : (255, 0, 0),\n",
+        "    \"Yellow\" : (255, 255, 0),\n",
+        "    \"Light Green\" : (0, 255, 0),\n",
+        "    \"Green\" : (0, 128, 0),\n",
+        "    \"Light Blue\" : (0, 255, 255),\n",
+        "    \"Blue\" : (0, 0, 255),\n",
+        "    \"Purple\" : (128, 0, 128),\n",
+        "    \"Pink\" : (255, 192, 203)\n",
+        "}\n",
+        "input_color = (120, 100, 200)\n",
+        "\n",
+        "def find_nearest_color(input_rgb, color_set):\n",
+        "    min_dist = float('inf')\n",
+        "    nearest_name = None\n",
+        "\n",
+        "    for name, rgb in color_set.items():\n",
+        "        dist = np.sqrt(sum((a-b) **2 for a, b in zip(input_rgb,rgb)))\n",
+        "        if dist < min_dist:\n",
+        "          min_dist = dist\n",
+        "          nearest_name = name\n",
+        "    return nearest_name, color_set[nearest_name]\n",
+        "\n",
+        "nearest_name, nearest_rgb = find_nearest_color(input_color, faber_castell_colors\n",
+        ")\n",
+        "print(f\"입력 색상: {input_color}\")\n",
+        "print(f\"가장 가까운 파버카스텔 색상: {nearest_name}, RGB: {nearest_rgb}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qn4lZUSXxZHV",
+        "outputId": "5b90bba3-f7d7-4623-a215-1b132b36f782"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "입력 색상: (120, 100, 200)\n",
+            "가장 가까운 파버카스텔 색상: Purple, RGB: (128, 0, 128)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Q_MCWvnEwdgI"
+      }
     }
   ]
 }
