Colab을 통해 생성됨

--- a/5주차실습.ipynb
+++ b/5주차실습.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQ1Ncnp1iUbv9OkbV/8jQq",
+      "authorship_tag": "ABX9TyMMeuYHPmFmYs7EDX0lOLuY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,7 +113,7 @@
         "plt.plot(y_values, x_values, label='Inverse func f^{-1}(y) = (y-1)/2', color = 'red')\n",
         "plt.xlabel('y')\n",
         "plt.ylabel('f^{-1}(y)')\n",
-        "plt.title(Inverse func. graph)\n",
+        "plt.title('Inverse func. graph')\n",
         "plt.legend()\n",
         "plt.grid(True)\n",
         "plt.show()"
@@ -121,19 +121,22 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 111
+          "height": 223
         },
         "id": "4hfpgQDCD7KF",
-        "outputId": "85562c08-dafb-423e-8cf7-fd88313b782a"
+        "outputId": "48b314b5-9c4c-4823-b74c-3f21a656c7fb"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax. Perhaps you forgot a comma? (ipython-input-1366812016.py, line 10)",
+          "ename": "NameError",
+          "evalue": "name 'np' is not defined",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-1366812016.py\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    plt.title(Inverse func. graph)\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2663248699.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0my_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mx_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minverse_f\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_values\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
           ]
         }
       ]
